libs/@local/hashql/ast/tests/ui/lower/expander/labeled-argument-newtype.jsonc
//@ run: fail
//@ description: labeled arguments are not allowed in `newtype`
[
  "::kernel::special_form::newtype",
  "Foo",
  "Integer",
  "Foo",
  { ":extra": { "#literal": 0 } }
  //~^ ERROR labeled arguments are not allowed in `newtype`
]
